<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/level_img_1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:textSize="15sp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textFontWeight="800"
            android:textColor="@color/white"
            android:text="@string/level_string_1_2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/level_img_1_2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:textSize="15sp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textFontWeight="800"
            android:textColor="@color/white"
            android:text="@string/level_string_1_3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/level_img_1_3" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:textSize="15sp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textFontWeight="800"
            android:textColor="@color/white"
            android:text="@string/level_string_1_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textSize="15sp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textFontWeight="800"
            android:textColor="@color/white"
            android:text="@string/level_string_1_5" />
    </LinearLayout>
</ScrollView>